--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "url": "git+https://github.com/hicommonwealth/edgeware-state-tester.git"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node src/index.ts"
+  },
+  "dependencies": {
+    "@polkadot/api": "^1.24.1",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.6"
   }
 }
