--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "@edgeware/node-types": "^2.3.5",
     "@polkadot/api": "^1.24.1",
     "@types/chai": "^4.2.11",
+    "@typescript-eslint/eslint-plugin": "^3.6.1",
+    "@typescript-eslint/parser": "^3.6.1",
     "chai": "^4.2.0",
+    "eslint": "^7.4.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.6"
   }
