--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "start": "ts-node src/index.ts"
   },
   "dependencies": {
-    "@edgeware/node-types": "^3.1.0-beta.3",
-    "@polkadot/api": "2.10.2-11",
+    "@edgeware/node-types": "^3.1.0-beta.5",
+    "@polkadot/api": "3.0.1",
     "@types/chai": "^4.2.11",
     "@types/rimraf": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
